Alteração no arquivo de e-mail

--- a/src/resources/mail/auth/forgot_password.html
+++ b/src/resources/mail/auth/forgot_password.html
@@ -1,1 +1,15 @@
-<p>Você esqueceu sua senha? Não tem problema, utilize esse token: {{token}}</p>
+<p>Olá,</p>
+
+<p>Se você solicitou redefinição de senha para o aplicativo Scan NFC-e, basta acessar o endereço a seguir:</p>
+
+<br/>
+
+<p><a>https://resetscannfce.herokuapp.com/{{token}}</a></p>
+
+<br/>
+
+<p>Caso contrário, favor desconsiderar este e-mail.</p>
+
+<br/><br/><br/><br/><br/><br/>
+
+<p>Atenção. Esta é uma mensagem automática, não é necessário respondê-la.</p>
