Alterações no arquivo de e-mail

--- a/src/resources/mail/auth/forgot_password.html
+++ b/src/resources/mail/auth/forgot_password.html
@@ -1,10 +1,8 @@
 <p>Olá,</p>
 
-<p>Se você solicitou redefinição de senha para o aplicativo Scan NFC-e, basta acessar o endereço a seguir:</p>
+<p>Se você solicitou redefinição de senha para o aplicativo Scan NFC-e, basta clicar 
 
-<br/>
-
-<p><a>https://resetscannfce.herokuapp.com/{{token}}</a></p>
+<a href="https://resetscannfce.herokuapp.com/{{token}}">aqui.</a></p>
 
 <br/>
 
