Alteração na mensagem do e-mail

--- a/src/resources/mail/auth/forgot_password.html
+++ b/src/resources/mail/auth/forgot_password.html
@@ -4,10 +4,12 @@
 
 <a href="https://resetscannfce.herokuapp.com/{{token}}">aqui.</a></p>
 
+<p>Ou acessar o endereço: https://resetscannfce.herokuapp.com/{{token}}</p>
+
 <br/>
 
 <p>Caso contrário, favor desconsiderar este e-mail.</p>
 
-<br/><br/><br/><br/><br/><br/>
+<br/><br/><br/><br/>
 
 <p>Atenção. Esta é uma mensagem automática, não é necessário respondê-la.</p>
